<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">THEMU</string>


    <string name="lbl_frg_home">THEMU</string>
    <string name="lbl_frg_session">Session</string>
    <string name="lbl_frg_effect_list">Effects</string>
    <string name="lbl_frg_effect">Effect</string>
    <string name="lbl_frg_gesture_list">Gestures</string>
    <string name="lbl_frg_gesture">Gesture</string>
    <string name="lbl_frg_profile_list">Profiles</string>
    <string name="lbl_frg_profile">Profile</string>
    <string name="lbl_frg_record_list">Records</string>
    <string name="lbl_frg_record">Record</string>

    <string name="key_id">id</string>


    <string name="title_gestures">Gestures</string>
    <string name="title_home">Home</string>
    <string name="title_records">Records</string>
    <string name="title_effects">Effects</string>
    <string name="title_profiles">Profiles</string>

    <string name="cd_gestures">Gestures</string>
    <string name="cd_home">Home</string>
    <string name="cd_records">Records</string>
    <string name="cd_effects">Effects</string>
    <string name="cd_profiles">Profiles</string>

    <string name="btn_startSession">Start Session</string>
    <string name="btn_save">SAVE</string>
    <string name="btn_create">CREATE</string>
    <string name="hint_text_effect">Effect</string>
    <string name="hint_Name_Effect">EFFECT NAME</string>
    <string name="action_toggle_mute">Toggle volume</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="log_MCU">MCU CHANGE</string>
    <string name="log_flex">flex change</string>
    <string name="txt_menique">Little Finger</string>
    <string name="txt_xAxis" >X AXIS</string>
    <string name="txt_yAxis" >Y AXIS</string>
    <string name="txt_zAxis" >Z AXIS</string>
    <string name="txt_anular" >Ring Finger</string>
    <string name="txt_medio" >Middle Finger</string>
    <string name="txt_indice" >Index Finger</string>
    <string name="txt_pulgar" >Thumb Finger</string>
    <string name="txt_axis_default" >0.00</string>
    <string name="hint_Name_Gesture">GESTURE NAME</string>
    <string name="hint_emptyGesture">No hay gestos PA</string>
    <string name="hint_emptyEffect">No hay effectos PA</string>
    <string name="hint_emptyProfile">No hay perfiles PA</string>
    <string name="txt_null">null</string>
    <string name="hint_Name_Profile">Profile Name</string>
    <string name="hint_text_gesture">Gesture</string>
    <string name="hint_text_effect_type">Effect Type</string>
    <string name="txt_led">Feedback Led</string>
    <string name="txt_0">0</string>
    <string name="hint_Name_Session">SESSION NAME</string>
    <string name="hint_text_profile">PROFILE</string>
    <string name="txt_flex">Sensor Flex</string>
    <string name="stop">Stop</string>
    <string name="txt_dynparam">Dynamic Parameters</string>
    <string name="btn_stopSession">STOP SESSION</string>

    <string-array name="gestures">
        <item>Gesto 0</item>
        <item>Gesto 1</item>
        <item>Gesto 2</item>
        <item>Gesto 3</item>
        <item>Gesto 4</item>
        <item>Gesto 5</item>
        <item>Gesto 6</item>
        <item>Gesto 7</item>
    </string-array>
</resources>